# full_fastapi_example

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
src/full_fastapi_example/: main.py
tests/: test_main.py
