[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "full-fastapi-example"
version = "0.1.0"
description = "Full FastAPI Example"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
full-fastapi-example = "full_fastapi_example.main:run"

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
